--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -75,6 +75,15 @@ body {
       }
     }
   }
+  &__error {
+    margin-top: 20px;
+    text-align: center;
+    span {
+      display: block;
+      margin-top: 25px;
+      font-size: 20px;
+    }
+  }
 }
 
 .container {
